Squash fixes Fix test classes with bag object
Fix test classes with bag object

Fix test classes with location id and min amount of bags

Fix test classes with limit_included and bag list